# fasttravel

./: .gitignore  README.md
fasttravel-rt/: .gitignore  Cargo.toml  README.md  rustfmt.toml
fasttravel-rt-client/: .gitignore  Cargo.toml  README.md  package.json  tsconfig.json  webpack.dev.js
fasttravel-rt-client/private/src/: delegate_connection.rs  delegate_core.rs  lib.rs  message_broker.rs  realtime_module.rs  websocket_connection.rs
fasttravel-rt-client/src/: FasttravelClient.ts  index.ts
fasttravel-rt-client/src/lib/: ConnectionService.ts  CoreService.ts  Events.ts  PubSub.ts  RealtimeService.ts
fasttravel-rt-client/test-apps/js/: index.js
fasttravel-rt-proto/: Cargo.toml  README.md  build.rs  realtime.proto
fasttravel-rt-proto/src/: helpers.rs  lib.rs
fasttravel-rt-proto/src/helpers/: connection.rs  core.rs
fasttravel-rt/fasttravel_rt_server/: Cargo.toml
fasttravel-rt/fasttravel_rt_server/src/: authorization.rs  client.rs  cospace.rs  lib.rs  server.rs  websocket.rs
fasttravel-rt/fasttravel_rt_server/src/client/: client_connection_actor.rs  client_connection_actor_creator.rs  client_connection_service_actor.rs
fasttravel-rt/fasttravel_rt_server/src/cospace/: cospace_actor.rs  cospace_manager.rs  service_actor.rs  service_pool.rs
fasttravel-rt/fasttravel_rt_server/src/websocket/: websocket_actor.rs  websocket_server.rs
fasttravel-rt/fasttravel_rt_services/: Cargo.toml
fasttravel-rt/fasttravel_rt_services/src/: ids.rs  lib.rs  services.rs
fasttravel-rt/fasttravel_rt_services/src/services/: mocker.rs
fasttravel-rt/src/: lib.rs
