[package]
name = "fasttravel_rt"
version = "0.0.1"
authors = ["cosmoplankton <cosmoplankton@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/fasttravel-xyz/fasttravel-rt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["fasttravel_rt_server", "fasttravel_rt_services"]

[dependencies]


# for examples
[dev-dependencies]
